Adding uglify task. Adding external resources and changing copy task.

--- a/app/core/css/hrtech.less
+++ b/app/core/css/hrtech.less
@@ -1,8 +1,12 @@
 .main-container {
 
   .header{
-    height: 100px;
-    background-color: blue;
+    height: 50px;
+    background-color: black;
+
+    img {
+      padding: 4px;
+    }
   }
 
   .footer {
