Adding two components -> Header and packages card. Injecting them on the tickets page. Adjusting css.

--- a/app/tickets-page/views/tickets.html
+++ b/app/tickets-page/views/tickets.html
@@ -1,3 +1,11 @@
 <div>
     Tickets page
+
+    <header-info></header-info>
+
+    Bla Bla
+
+    <packages-card></packages-card>
+
+    Bla Bla
 </div>
