--- a/app/core/css/hrtech.less
+++ b/app/core/css/hrtech.less
@@ -4,7 +4,12 @@ html, body {
   height:100%;
 }
 
+//css reset
+
 .main-container {
+
+  min-height: 100%;
+  position: relative;
 
   .header{
     height: 50px;
@@ -16,7 +21,45 @@ html, body {
   }
 
   .footer {
-    height: 200px;
-    background-color: brown;
+    background-color: #2c292a;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 160px;   /* Height of the footer */
+
+    text-align: center;
+    color: white;
+
+    .img {
+      margin-top: 15px;
+      img{
+        height: 22px;
+        width: 240px;
+      }
+    }
+
+    .extra {
+      margin-top: 15px;
+      text-transform: uppercase;
+      font-size: 12px;
+      span {
+        padding: 0 15px 0 15px;
+        cursor: pointer;
+      }
+    }
+
+    .social {
+      margin-top: 15px;
+      font-size: 22pt;
+      i{
+        cursor: pointer;
+        padding: 0 12px 0 12px;
+      }
+    }
+
+    .contact{
+      font-size: 10px;
+      margin-top: 10px;
+    }
   }
 }
