Creating constant. Adjusting data. Injecting constant and making the communication between controller and directives.

--- a/app/tickets-page/views/tickets.html
+++ b/app/tickets-page/views/tickets.html
@@ -5,7 +5,7 @@
 
     Bla Bla
 
-    <packages-card></packages-card>
+    <packages-card data-package="ticketsCtrl.packages[1]"></packages-card>
 
     Bla Bla
 </div>
