Styling for mobile. Adding resets. Adding media queries. Fixing grunt-config.

--- a/app/components/header-info/header-info.html
+++ b/app/components/header-info/header-info.html
@@ -1,7 +1,7 @@
 <div class="header-container">
     <div class="ticket-box">
         <div data-ng-repeat="type in vm.ticketsType" class="ticket-type {{type.class}}">
-            <img src="resources/{{type.icon}}"/> <span>{{type.title}}</span>
+            <img src="resources/{{type.icon}}" class="icon"> <br class="break-line" /><span class="text">{{type.title}}</span>
         </div>
     </div>
 </div>
