--- a/app/core/css/hrtech.less
+++ b/app/core/css/hrtech.less
@@ -4,6 +4,11 @@ html, body {
   height:100%;
 }
 
+h1, h2, h3, h4, h5, h6, p, ul {
+  margin: 0;
+  padding: 0;
+}
+
 //css reset
 
 .main-container {
