--- a/app/core/css/medias.less
+++ b/app/core/css/medias.less
@@ -1,33 +1,71 @@
 @media screen and (min-width: 1920px) {
   /* medium desktop styles */
-  .header-container {
-    background-color: black;
-  }
+  .header-container{
+    height: 75px;
 
+    .ticket-box{
+      .ticket-type{
+        .break-line{
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1919px) and (min-width: 1024px) {
   /* medium desktop styles */
 
-  .header-container {
-    background-color: blue;
+  .header-container{
+    height: 75px;
+
+    .ticket-box{
+      .ticket-type{
+        .break-line{
+          display: none;
+        }
+      }
+    }
   }
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   /* tablet styles */
 
-  .header-container {
-    background-color: red;
-  }
+  .header-container{
+    height: 75px;
 
+    .ticket-box{
+      .ticket-type{
+        .break-line{
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 767px) {
   /* mobile styles */
+  .header-container{
+    height: 94px;
 
-  .header-container {
-    background-color: black;
+    .ticket-box{
+      .ticket-type{
+        vertical-align: top;
+
+        .icon {
+          padding-bottom: 14px;
+        }
+
+        .break-line{
+          display: block;
+        }
+
+        .text{
+          margin-top: 10px;
+        }
+      }
+    }
   }
-
 }
