Fixing package card and adjusting media queries.

--- a/app/core/css/medias.less
+++ b/app/core/css/medias.less
@@ -27,6 +27,13 @@
       }
     }
   }
+
+  .col-sm-3 {
+    padding-left: 0;
+    padding-right: 0;
+
+    width: 24%
+  }
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
@@ -42,6 +49,20 @@
         }
       }
     }
+  }
+
+
+  .packages-container {
+    .box-container {
+      padding-left: 20px;
+    }
+  }
+
+  .col-sm-3 {
+    padding-left: 0;
+    padding-right: 0;
+
+    width: 48%
   }
 }
 
@@ -67,5 +88,12 @@
         }
       }
     }
+  }
+
+  .col-sm-3 {
+    padding-left: 0;
+    padding-right: 0;
+
+    width: 100%
   }
 }
