--- a/app/components/packages-card/packages-card.less
+++ b/app/components/packages-card/packages-card.less
@@ -1,13 +1,17 @@
 .packages-container {
-  width: 100vw;
+  width: 100%;
+  margin: 0 auto;
 
   .box-container {
     position: relative;
+    margin-left: 5px;
+    margin-right: 5px;
+
+    text-align: -webkit-center;
 
     .package-box {
       height: 300px;
       background-color: #f8f8f8;
-      width: 100vw;
       max-width: 380px;
       margin-top: 25px;
 
@@ -19,9 +23,12 @@
          top: 0;
          visibility: visible;*/
 
-      text-align: center;
+      //text-align: center;
       color: #00a7e1;
       text-transform: uppercase;
+
+      margin-left: 5px;
+      margin-right: 5px;
 
       .bold {
         font-weight: bold;
