Adding navigation and data selection between ticket type and package prices. Adding selection and group type in constants.

--- a/app/components/packages-card/packages-card.html
+++ b/app/components/packages-card/packages-card.html
@@ -1,6 +1,6 @@
 <div class="packages-container">
     <div class="box-container row">
-        <div class="package-box col-sm-3" id="package-{{package.id}}" data-ng-repeat="package in vm.packages track by $index">
+        <div class="package-box col-sm-3 {{package.groupTypePromo === vm.groupType ? 'promo' : ''}}" id="package-{{package.id}}" data-ng-repeat="package in vm.packages track by $index">
 
             <div class="title bold">{{package.title}}</div>
             <div class="value bold"><i class="fa fa-euro"></i>{{package.value}}</div>
