--- a/app/core/css/medias.less
+++ b/app/core/css/medias.less
@@ -11,6 +11,24 @@
       }
     }
   }
+
+  .packages-container {
+    padding-left: 60px;
+    .box-container {
+      padding-left: 20px;
+
+      .package-box {
+        max-width: 920px;
+      }
+    }
+  }
+
+  .col-sm-3 {
+    padding-left: 0;
+    padding-right: 0;
+
+    width: 24%
+  }
 }
 
 @media screen and (max-width: 1919px) and (min-width: 1024px) {
@@ -24,6 +42,16 @@
         .break-line{
           display: none;
         }
+      }
+    }
+  }
+
+  .packages-container {
+    .box-container {
+      padding-left: 20px;
+
+      .package-box {
+        max-width: 490px;
       }
     }
   }
@@ -51,10 +79,13 @@
     }
   }
 
-
   .packages-container {
     .box-container {
       padding-left: 20px;
+
+      .package-box {
+        max-width: 490px;
+      }
     }
   }
 
