Simplifying media queries.

--- a/app/components/packages-card/packages-card.html
+++ b/app/components/packages-card/packages-card.html
@@ -11,7 +11,7 @@
                 <input placeholder="{{package.promoField}}">
             </div>
 
-            <div class="book">Book</div>
+            <div class="book">Book Now</div>
         </div>
     </div>
 </div>
