Adjusting extra text for packages. Styling the most popular part.

--- a/app/components/packages-card/packages-card.less
+++ b/app/components/packages-card/packages-card.less
@@ -27,6 +27,11 @@
         font-weight: bold;
       }
 
+      .popular {
+        padding-top: 20px;
+        color: red;
+      }
+
       .title {
         padding-top: 20px;
       }
@@ -81,6 +86,14 @@
           border-width: thin;
         }
       }
+
+      .extra-text{
+        padding-top: 20px;
+        text-transform: none;
+        color: grey;
+        font-size: 13px;
+        text-align: left;
+        margin-left: 27px;      }
     }
 
     .promo {
