--- a/app/core/css/medias.less
+++ b/app/core/css/medias.less
@@ -7,6 +7,22 @@
 
       .package-box {
         max-width: 920px;
+
+        .extra-text {
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1919px) {
+  .packages-container {
+    .box-container {
+      .package-box {
+        .extra-text {
+          display: none;
+        }
       }
     }
   }
