Adding a new svg file. Adding extra content in the tickets area.

--- a/app/core/css/medias.less
+++ b/app/core/css/medias.less
@@ -7,10 +7,15 @@
 
       .package-box {
         max-width: 920px;
+        height: 380px;
 
         .extra-text {
           display: block;
         }
+      }
+
+      .promo {
+          height: 430px !important;
       }
     }
   }
