--- a/app/tickets-page/tickets.less
+++ b/app/tickets-page/tickets.less
@@ -1,4 +1,39 @@
 .tickets-body {
   /* Height of the footer - padding-bottom*/
   padding-bottom: 160px;
+
+  .extra-content {
+    padding-top: 50px;
+    width: 100%;
+    text-transform: uppercase;
+
+    .close-section {
+      color: #00a7e1;
+      border-color: #00a7e1;
+      border-width: thin;
+      border-style: solid;
+      margin: 0 auto;
+      width: 150px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .partner {
+      padding-top: 100px;
+      color: grey;
+      text-align: center;
+
+      .images {
+        padding-top: 15px;
+        padding-bottom: 30px;
+
+        img {
+          height: 65px;
+          width: 65px;
+          margin-right: 10px;
+          margin-left: 10px;
+        }
+      }
+    }
+  }
 }
