--- a/app/tickets-page/tickets.less
+++ b/app/tickets-page/tickets.less
@@ -2,6 +2,59 @@
   /* Height of the footer - padding-bottom*/
   padding-bottom: 160px;
 
+  .selection-type {
+    width: 100%;
+    padding-top: 40px;
+    text-transform: uppercase;
+    color: #bee6f2;
+    font-size: 16px;
+
+    .list {
+      margin: 0 auto;
+      text-align: center;
+
+      span {
+        vertical-align: middle;
+      }
+
+      .sold {
+        color: white;
+        background-color: #bee6f2;
+      }
+
+      .active {
+        color: #00a7e1;
+        font-weight: bold;
+      }
+
+      .slash {
+        font-size: 30px;
+      }
+
+      .until {
+        color: black;
+        font-size: 12px;
+      }
+
+      .date{
+        color: red;
+        font-size: 14px;
+      }
+    }
+  }
+
+  .info {
+    padding-top: 20px;
+    width: 100%;
+    .header-text {
+      width: 700px;
+      margin: 0 auto;
+      text-align: center;
+      color: grey;
+      font-size: 13px;
+    }
+  }
+
   .extra-content {
     padding-top: 50px;
     width: 100%;
