Adding transitions. Simplifying borders. Adding readme information.

--- a/app/tickets-page/tickets.less
+++ b/app/tickets-page/tickets.less
@@ -62,9 +62,8 @@
 
     .close-section {
       color: #00a7e1;
-      border-color: #00a7e1;
-      border-width: thin;
-      border-style: solid;
+
+      border: thin solid #00a7e1;
       margin: 0 auto;
       width: 150px;
       text-align: center;
