--- a/app/components/header-info/header-info.less
+++ b/app/components/header-info/header-info.less
@@ -15,6 +15,11 @@
       text-align: center;
       text-transform: uppercase;
 
+      transition: all .2s linear;
+      -webkit-transition: all .2s linear;
+      -moz-transition: all .2s linear;
+      -o-transition: all .2s linear;
+
       :hover{
         color: #00a7e1;
       }
