--- a/app/components/packages-card/packages-card.less
+++ b/app/components/packages-card/packages-card.less
@@ -63,6 +63,7 @@
           color: black;
           width: 80%;
           text-transform: none;
+          text-align: center;
         }
       }
 
